[gd_scene load_steps=3 format=3 uid="uid://dupkjur0hpgs5"]

[ext_resource type="Script" path="res://addons/console_and_textchat/demo/demo.gd" id="1_ivaq7"]
[ext_resource type="Script" path="res://addons/console_and_textchat/console.gd" id="2_we1j5"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_ivaq7")

[node name="ConsoleAndTextchat" type="Panel" parent="."]
offset_right = 300.0
offset_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_we1j5")
